<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.carlospinan.mueveloconandroid.AnimationsExampleActivity">

    <Button
        android:id="@+id/fadeInAnimation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fade_in" />

    <Button
        android:id="@+id/fadeOutAnimation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fadeInAnimation"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/fade_out" />

    <Button
        android:id="@+id/rotateAnimation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fadeOutAnimation"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/rotate" />

    <Button
        android:id="@+id/zoomAnimation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rotateAnimation"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/zoom" />

    <Button
        android:id="@+id/blinkAnimation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/zoomAnimation"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/blink" />

    <ImageView
        android:id="@+id/exampleImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@mipmap/ic_launcher" />
</RelativeLayout>
